# discord_reaction_info

./: .gitignore  Cargo.toml  README.md
docs/: project-info.md
src/: main.rs  utils.rs
src/commands/: mod.rs  rinfo.rs
