[package]
name = "discord_reaction_info"
version = "0.1.0"
edition = "2024"

[dependencies]
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-model = "0.16"
twilight-cache-inmemory = "0.16"
twilight-interactions = "0.16"
twilight-util = { version = "0.16", features = ["builder"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.98"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
dotenv = "0.15.0"
regex = "1.10.3"

[dev-dependencies]
tokio-test = "0.4.3"
assert_matches = "1.5.0"
